# DualViewKnowledgeGraphExplorer

./: QueryObjectsPresentation.ipynb  QuerySetRunner.ipynb  README.md  TurnYourStuffIntoResources.ipynb  custom.css  kgwebwalker.ipynb  kgwebwalker.py  navigation_steps.ttl  navigation_steps.yaml  pyproject.toml  query_set_runner.py  test_slide.html  test_slide2.html
images/: castle_semiotic_triangle.graphviz  create_castleimages
